--- a/popup.html
+++ b/popup.html
@@ -17,10 +17,12 @@
             <input type="text" name="link" id="link" />
 
             <label for="tags">Tags</label>
-            <input type="text" name="tags" id="tags" />
+            <input type="text" name="tags" id="tags" list="tagsList" />
+            <datalist id="tagsList"></datalist>
 
             <label for="subFolder">Sub-folder</label>
-            <input type="text" name="subFolder" id="subFolder" />
+            <input type="text" name="subFolder" id="subFolder" list="subFoldersList" />
+            <datalist id="subFoldersList"></datalist>
 
             <label for="comment">Comment</label>
             <textarea name="comment" id="comment"></textarea>
