--- a/mozilla.html
+++ b/mozilla.html
@@ -8,10 +8,7 @@ Save bookmarks as markdown files directly into your Obsidian vault.
 </ul>
 
 <b>⚙️ Setup</b>
-<ol>
-    <li>Install the Extension: Add the Obsidian Bookmarks extension to your Firefox browser.</li>
-    <li>Configure Options: Go to the add-on options page in Firefox's Add-ons tab and set the vault name, folder name, file name template, and note template.</li>
-</ol>
+Go to the add-on options page in Firefox's Add-ons tab and set the vault name, folder name, file name template, and note template.
 
 <b>💡 Tips</b>
 You can create a bookmarks viewer in Obsidian with <a href="https://github.com/kepano/obsidian-minimal">Minimal</a> Theme, <a href="https://blacksmithgu.github.io/obsidian-dataview/">Dataview</a> plugin and this note:
