--- a/mozilla.html
+++ b/mozilla.html
@@ -3,7 +3,7 @@ Save bookmarks as markdown files directly into your Obsidian vault.
 <b>✨ Features</b>
 <ul>
   <li>Save bookmarks to sub-folders within your Obsidian vault.</li>
-  <li>Automatically grab images from the bookmarked website.</li>
+  <li>Automatically grab the most relevant image from the bookmarked website.</li>
   <li>Customize the template for your bookmark notes.</li>
 </ul>
 
